--- a/src/styling.scss
+++ b/src/styling.scss
@@ -1,6 +1,6 @@
 body{
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
   font-family: Georgia, 'Times New Roman', Times, serif !important;
@@ -24,12 +24,13 @@ li {
   left: 0;
   margin: 0;
   padding: 0;
-  color: black;
-  width: 100%;
-  height: 100%;
-  background-color: white;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
-  background-color: rgb(236, 235, 234);
+  color: rgb(150, 147, 144);
+  // color: black;
+  background-color: black;
+  // background-color: rgb(236, 235, 234);
   z-index: 2;
 }
 
@@ -86,6 +87,7 @@ h1 {
   border-radius: 5pt;
   height: calc(25px + 1.2vw);
   width: calc(25px + 1.2vw);
+  cursor: pointer;
 }
 
 /* .left-box p {
@@ -262,8 +264,3 @@ button:disabled {
   width: 100%;
 }
 
-.spinner-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
