--- a/src/styling.scss
+++ b/src/styling.scss
@@ -107,23 +107,27 @@ h1 {
 } */
 .split-container {
   position: absolute;
-  justify-content: space-around;
+  justify-content: center;
   display: flex;
   height: 75vh;
   width: 100vw;
   top: 15vh;
-  padding: 0 50px;
+}
+
+.split-container-wrapper {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+  height: 100%;
+  gap: 2em;
 }
 
 .left-box{
-  /* position: absolute; */
   display: flex;
   flex: 1;
   width: calc(33vw - 60px); 
-  /* left: 50px; */
   top: 15vh;
   height: 75vh;
-  padding: 0 0px 0 10px;
   flex-direction: column;
   align-items:center;
   justify-content: space-around;
@@ -132,31 +136,42 @@ h1 {
 .left-text-container {
   position: relative;
   margin: auto;
-  padding: 0 10px;
   text-align: center;
 }
 
 .right-box{
-  /* position: absolute; */
-  /* display: flex; */
   flex: 2;
-  width: calc(66vw - 60px);
-  top: 15vh;
-  right: 50px;
-  height: 75vh;
-  padding: 0 20px;
+  height: 100%;
+  width: 100%;
   align-items: center;
   justify-content: center;
 }
 
 .right-child-box {
   flex: 2;
-  width: calc(66vw - 60px);
-  top: 15vh;
-  height: 75vh;
-  margin: 0 10px;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
   border: solid black 1px;
   border-radius: 5pt;
+}
+
+.rightText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.rightTextWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 70%;
 }
 
 .img-box{
@@ -175,8 +190,8 @@ h1 {
   width: 100%;
   height: 100%;
   position: relative;
-  margin-top: auto;
-  margin-bottom: auto;
+  // margin-top: auto;
+  // margin-bottom: auto;
   object-fit: contain;
   display: flex;
   flex-direction: column;
@@ -187,6 +202,7 @@ h1 {
 .img-right-box img{
   max-height: 100%;
   max-width: 100%;
+  object-fit: contain;
 }
 
 .rightArrow{
@@ -211,7 +227,7 @@ button:disabled {
 .content-box{
   position: absolute;
   height: 80%;
-  padding: 0 calc(35px + 1.2vw);
+  width: 100%;
   top: 15%;
   object-fit: contain;
   display: flex;
@@ -220,7 +236,7 @@ button:disabled {
 
 .content-images {
   height: 100%;
-  width: 100%;
+  width: 95%;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -241,8 +257,7 @@ button:disabled {
 
 .content-text {
   height: 100%;
-  width: 100%;
-  padding: 50px 20px;
+  width: 95%;
   display: flex;
   align-items: center;
   justify-content: space-around;
