--- a/src/styling.scss
+++ b/src/styling.scss
@@ -190,13 +190,16 @@ h1 {
   width: 100%;
   height: 100%;
   position: relative;
-  // margin-top: auto;
-  // margin-bottom: auto;
   object-fit: contain;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.embed-container {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .img-right-box img{
@@ -288,5 +291,15 @@ button:disabled {
   position: relative;
   height: 100%;
   width: 100%;
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
